added one more blog

--- a/_posts/2017-1-1-Shows.md
+++ b/_posts/2017-1-1-Shows.md
@@ -5,6 +5,7 @@ title: Shows I've watched
 
 ##   2017 
 
+#### Kids Gorgeous by John Mulaney, Dec, 2017, Academy of Music, Philadelphia
 #### Black Violin, Oct, 2017, Annenberg Center, Philadelphia
 #### What I Amazon by Mask & Wig Club, Oct, 2017, Penn, Philadelphia
 #### LaughtHerFest by Bloomers, Spet, 2017, Penn, Philadelphia
